🤖 Generated Claude project
Generated by DesignArena Agent - AI-powered code generation system
Repository: agentic-399e4964
Generated at: 2025-11-23 22:30:58 UTC

This project was automatically generated by AI and includes:
- Complete project structure
- Comprehensive .gitignore (900+ patterns)
- Ready for development and deployment

🔗 Powered by DesignArena - https://github.com/Design-Arena-Gens

--- a/.gitignore
+++ b/.gitignore
@@ -914,4 +914,26 @@ config/database.yml
 *.tar
 *.zip
 
+# ===== YOUTUBE SHORTS PIPELINE =====
+# Generated videos and assets
+/public/videos/*
+!/public/videos/.gitkeep
+
+# Audio files
+*.mp3
+*.wav
+*.aac
+
+# Video files
+*.mp4
+*.mov
+*.avi
+*.webm
+
+# Footage files
+footage_*.mp4
+
+# Info files (keep for tracking)
+# info.json
+
 # ===== END =====
